# rs_axum_struct

./: .env  .gitignore  Cargo.toml
src/: db.rs  main.rs
src/handlers/: product_handler.rs  user_handler.rs
src/http/: error.rs  mod.rs  result.rs  server.rs
src/routes/: mod.rs  product_route.rs  user_route.rs
