[package]
name = "rs_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
tokio = { version = "1", features = ["full"] }
axum-server = "0.7.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tower-http = { version = "0.6.2", features = ["cors"] }
sqlx = { version = "0.8.4", features = ["runtime-tokio-native-tls", "postgres", "macros", "bigdecimal", "time"] }
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
thiserror = "2.0.12"